--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.5.21'
     repositories {
+        maven {url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         google()
         mavenCentral()
     }
